--- a/index.html
+++ b/index.html
@@ -1,9 +1,47 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Title</title>
-  </head>
-  <body>
-    <p>Paragraph</p>
-  </body>
+<!--- ICS2O-Assignment-6--->
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="A different  joke gets shown on refresh" />
+  <meta name="keywords" content="mths, icd2o" />
+  <meta name="author" content="Clara Tyman" />
+  <meta name="theme-color" content="#FFFFFF" />
+  <title>dad jokes</title>
+  <link rel="canonical" href="https://github.com/MTHS-ICD2O-1-2023/ICD2O-Assignment-06-clara-tyman" />
+  <link rel="manifest" href="/ICD2O-Assignment-06-clara-tyman/manifest.webmanifest" />
+  <link rel="stylesheet" href="./css/styles.css" />
+  <!--- None blocking for Lighthouse report --->
+  <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none"
+    onload="if(media!='all')media='all'" />
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+  </noscript>
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.pink-red.min.css" media="none"
+    onload="if(media!='all')media='all'" />
+  <noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.pink-red.min.css" />
+  </noscript>
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+</head>
+<title>dad jokes</title>
+<body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script src="./js/script.js"></script>
+  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+      <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">The best jokes you will ever hear</span>
+      </div>
+    </header>
+    <main class="mdl-layout__content">
+      <div id="joke"></div>
+      <img src="./images/catto.svg" alt="cat" height="400" width="400">
+    </main>
+  </div>
+</body>
 </html>
