--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="A different  joke gets shown on refresh" />
+  <meta name="description" content="A different joke gets shown on refresh" />
   <meta name="keywords" content="mths, icd2o" />
   <meta name="author" content="Clara Tyman" />
   <meta name="theme-color" content="#FFFFFF" />
-  <title>dad jokes</title>
+  <title>Dad jokes</title>
   <link rel="canonical" href="https://github.com/MTHS-ICD2O-1-2023/ICD2O-Assignment-06-clara-tyman" />
   <link rel="manifest" href="/ICD2O-Assignment-06-clara-tyman/manifest.webmanifest" />
   <link rel="stylesheet" href="./css/styles.css" />
@@ -19,16 +19,16 @@
   <noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   </noscript>
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.pink-red.min.css" media="none"
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-pink.min.css" media="none"
     onload="if(media!='all')media='all'" />
   <noscript>
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.pink-red.min.css" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.purple-pink.min.css" />
   </noscript>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
 </head>
-<title>dad jokes</title>
+<title>Dad jokes</title>
 <body>
   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   <script src="./js/script.js"></script>
@@ -40,7 +40,7 @@
     </header>
     <main class="mdl-layout__content">
       <div id="joke"></div>
-      <img src="./images/catto.svg" alt="cat" height="400" width="400">
+      <img class="image" src="./images/IMG_1417.png" alt="man laughing" height="400" width="400">
     </main>
   </div>
 </body>
